# Web_module_2

./: Dockerfile  pyproject.toml
personal_assistant/: book_class.py  book_commands.py  help.py  notes_commands.py  out_table.py
